@@ -16,6 +16,9 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.2/
  * `for` loops in template code blocks no longer establish their own locals
    scope, meaning you can now access variables assigned in the loop outside
    of the loop, just as you can in regular Python code (ticket #259).
+ * Import statements inside function definitions in template code blocks no 
+   longer result in an UndefinedError when the imported name is accessed 
+   (ticket #276).
 
 
 Version 0.5.1
